...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:id="@+id/homeFrag"
    android:layout_width="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="25dp"
...
            android:layout_height="20dp"
            android:background="@null"
            android:src="@drawable/ic_arrow_right"
            android:layout_toEndOf="@id/arrowDown" />

        <com.example.schedule.ui.transitions.EntryEvent
            android:id="@+id/entryEvent"
            android:elevation="10sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/dayId"
            android:visibility="invisible"
            android:clickable="true"
...
